@@ -1,4 +1,7 @@
 CMAKE_MINIMUM_REQUIRED ( VERSION 3.2 FATAL_ERROR )
+if(POLICY CMP0074)
+  cmake_policy(SET CMP0074 NEW)
+endif()
 
 ## ===========================================================================
 ##  Project Information
