@@ -1,4 +1,7 @@
-2018-12-07  Petasis George  <petasis@iit.demokritos.gr>
+2018-12-23  Petasis George  <petasis@iit.demokritos.gr>
+	* .appveyor.yml: Set tclsh for IronTcl.
+
+2018-12-22  Petasis George  <petasis@iit.demokritos.gr>
 	* .appveyor.yml: Added a command to install project after build.
 
 2018-12-07  Petasis George  <petasis@iit.demokritos.gr>
